Fixed overflow

--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -18,7 +18,8 @@ body {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 0;
+  overflow-y: auto;
+  z-index: -1;
 }
 
 .wrapper {
